--- a/res/menu/menu_duel.xml
+++ b/res/menu/menu_duel.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+     <item
+        android:id="@+id/life"
+        android:icon="@drawable/ic_colon"
+        android:title="@string/menu_life"/>
+    
     <item
         android:id="@+id/stop"
         android:icon="@drawable/ic_stop"
-        android:title="@string/stop"/>
+        android:title="@string/menu_stop"/>
 
 </menu>
