--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -9,4 +9,26 @@
         <item name="android:windowActionBar">false</item>
     </style>
 
+     <style name="ChronometerComponent">
+        <item name="android:layout_width">150px</item>
+        <item name="android:layout_height">150px</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginTop">-17px</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">130px</item>
+    </style>
+
+    <style name="ChronometerIcon">
+        <item name="android:layout_width">55px</item>
+        <item name="android:layout_height">55px</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="MenuTheme" parent="@android:style/Theme.DeviceDefault">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@null</item>
+    </style>
+    
 </resources>
