--- a/res/menu/menu_duel.xml
+++ b/res/menu/menu_duel.xml
@@ -18,9 +18,9 @@
         android:icon="@drawable/ic_plus"
         android:title="@string/menu_enemy"/>
     <item
-        android:id="@+id/reset"
+        android:id="@+id/restart"
         android:icon="@drawable/ic_sync"
-        android:title="@string/menu_reset"/>
+        android:title="@string/menu_restart"/>
     <item
         android:id="@+id/stop"
         android:icon="@drawable/ic_stop"
